implemented pickle dumping and loaoading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -82,6 +82,7 @@
                 "-train", "tza",
                 "-train_lvl", "c",
                 "-test", "tza,uga",
+                "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
                 "-adamwr", "0.001",
@@ -99,7 +100,8 @@
             "args": [ 
                 "-train", "uga",
                 "-train_lvl", "c",
-                "-test", "tza,uga",
+                "-test", "tza",
+                "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
                 "-adamwr", "0.001",
@@ -116,8 +118,9 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
                 "-train", "cod",
-                "-train_lvl", "c",
-                "-test", "tza,uga,cod",
+                "-train_lvl", "f",
+                "-test", "cod",
+                "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
                 "-adamwr", "0.001",
@@ -143,7 +146,7 @@
             ]
         },
         {
-            "name": "TZA->UGA superpixel_disagg_model.py",
+            "name": "TZA,UGA->COD superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -152,8 +155,8 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "tza",
-                "-train_lvl", "f",
+                "-train", "tza,uga",
+                "-train_lvl", "f,f",
                 "-test", "uga,tza,cod",
                 "-lr", "0.00001",
                 "-optim", "adamw",
@@ -174,6 +177,7 @@
                 "-train", "tza,uga",
                 "-train_lvl", "f,c",
                 "-test", "uga,tza",
+                "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
                 "-adamwr", "0.001",
@@ -192,6 +196,7 @@
                 "-train", "uga,tza",
                 "-train_lvl", "f,c",
                 "-test", "tza,uga",
+                "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
                 "-adamwr", "0.001",
