--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -165,7 +165,7 @@
             ]
         },
         {
-            "name": "TZA&UGA->UGA superpixel_disagg_model.py",
+            "name": "TZA,UGA->UGA superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -184,7 +184,7 @@
             ]
         },
         {
-            "name": "TZA&UGA->TZA superpixel_disagg_model.py",
+            "name": "TZA,UGA->TZA superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -196,6 +196,25 @@
                 "-train", "uga,tza",
                 "-train_lvl", "f,c",
                 "-test", "tza,uga",
+                "-lr", "0.00001",
+                "-optim", "adamw",
+                "-wr", "0.",
+                "-adamwr", "0.001",
+            ]
+        },
+        {
+            "name": "TZA,UGA,COD->COD superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,cod",
+                "-train_lvl", "f,f,c",
+                "-test", "tza,uga,cod",
                 "-lr", "0.00001",
                 "-optim", "adamw",
                 "-wr", "0.",
