--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -81,11 +81,13 @@
             "args": [
                 "-train", "tza",
                 "-train_lvl", "c",
-                "-test", "tza,uga",
+                "-test", "tza",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-log_step", "50",
+                "-mm", "True",
             ]
         },
         {
@@ -99,12 +101,14 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
                 "-train", "uga",
-                "-train_lvl", "f",
-                "-test", "tza,uga",
-                "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-train_lvl", "c",
+                "-test", "uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-lstep", "50",
+                "-mm", "True"
             ]
         },
         {
@@ -120,10 +124,11 @@
                 "-train", "cod",
                 "-train_lvl", "c",
                 "-test", "cod",
-                "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "--log_step", "50"
             ]
         },
         {
@@ -139,10 +144,31 @@
                 "-train", "uga",
                 "-train_lvl", "f",
                 "-test", "tza,uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-mm", "True"
+            ]
+        },
+        {
+            "name": "TZA->UGA superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "tza",
+                "-train_lvl", "f",
+                "-test", "tza,uga",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-mm", "True"
             ]
         },
         {
@@ -159,9 +185,9 @@
                 "-train_lvl", "f,f",
                 "-test", "uga,tza,cod",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
             ]
         },
         {
@@ -178,9 +204,10 @@
                 "-train_lvl", "f,f",
                 "-test", "uga,tza",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-mm", "True"
             ]
         },
         {
@@ -197,9 +224,10 @@
                 "-train_lvl", "f,c",
                 "-test", "tza,uga",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-mm", "True"
             ]
         },
         {
@@ -216,9 +244,9 @@
                 "-train_lvl", "f,f,c",
                 "-test", "tza,uga,cod",
                 "-lr", "0.00001",
-                "-optim", "adamw",
-                "-wr", "0.",
-                "-adamwr", "0.001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
             ]
         }
     ]
