bug fixes after testing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -164,10 +164,11 @@
                 "-train", "tza",
                 "-train_lvl", "f",
                 "-test", "tza,uga",
-                "-lr", "0.00001",
+                "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
+                "-lstep", "50",
                 "-mm", "True"
             ]
         },
