--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -81,12 +81,12 @@
             "args": [
                 "-train", "tza",
                 "-train_lvl", "c",
-                "-test", "tza,tza",
-                "-lr", "0.00001",
+                "-test", "tza,uga",
+                "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-lstep", "200",
+                "-lstep", "400",
                 "-mm", "True",
             ]
         },
