fixed bug with mask handling during online dataloading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -87,7 +87,7 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "400",
-                "-mm", "True",
+                // "-mm", "True",
             ]
         },
         {
