--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -268,7 +268,7 @@
             ]
         },
         {
-            "name": "TZA,UGA,COD,RWA->RWA superpixel_disagg_model.py",
+            "name": "TZA,UGA,COD,RWA->COD superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -284,6 +284,27 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
+                "-lstep", "50",
+            ]
+        },
+        {
+            "name": "TZA,UGA,COD,RWA->TZA superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,rwa,cod",
+                "-train_lvl", "f,c,f,f",
+                "-test", "tza,uga,cod,rwa",
+                "-lr", "0.00001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-lstep", "50",
             ]
         }
     ]
