--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -102,8 +102,9 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-lstep", "10",
+                "-lstep", "20",
                 "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -124,7 +125,8 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "200",
-                "-mm", "True"
+                "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -144,7 +146,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "--log_step", "50"
+                "--log_step", "50",
+                "-vs", "0.1"
             ]
         },
         {
@@ -164,7 +167,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "--log_step", "50"
+                "--log_step", "50",
+                "-vs", "0.1"
             ]
         },
         {
@@ -184,7 +188,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-mm", "True"
+                "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -205,7 +210,8 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "50",
-                "-mm", "True"
+                "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -225,6 +231,7 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
+                "-vs", "0.1"
             ]
         },
         {
@@ -244,7 +251,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-mm", "True"
+                "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -264,7 +272,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-mm", "True"
+                "-mm", "True",
+                "-vs", "0.1"
             ]
         },
         {
@@ -285,6 +294,7 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "40",
+                "-vs", "0.1"
             ]
         },
         {
@@ -304,7 +314,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-lstep", "40",
+                "-lstep", "4000",
+                "-vs", "0.1"
             ]
         }
     ]
