--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -275,7 +275,7 @@
                 "-mm", "True",
                 "-vs", "0.1"
             ]
-        },
+        }
         {
             "name": "TZA,UGA,COD,RWA->COD superpixel_disagg_model.py",
             "type": "python",
@@ -293,7 +293,7 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-lstep", "40",
+                "-lstep", "4000",
                 "-vs", "0.1"
             ]
         },
@@ -309,6 +309,27 @@
             "args": [ 
                 "-train", "uga,tza,rwa,cod",
                 "-train_lvl", "f,c,f,f",
+                "-test", "tza,uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-lstep", "4000",
+                "-vs", "0.1"
+            ]
+        },
+        {
+            "name": "TZA,UGA,COD,RWA->UGA superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,rwa,cod",
+                "-train_lvl", "c,f,f,f",
                 "-test", "tza,uga",
                 "-lr", "0.0001",
                 "-optim", "adam",
