--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -103,8 +103,30 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-lstep", "20",
-                "-mm", "True",
+                "-lstep", "2000",
+                "-mm", "m",
+                "-vs", "0.2"
+            ]
+        },
+        {
+            "name": "TZA_CV superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "tza",
+                "-train_lvl", "f",
+                "-test", "tza",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "-lstep", "4000",
+                "-mm", "m",
                 "-vs", "0.2"
             ]
         },
@@ -142,13 +164,14 @@
             "args": [ 
                 "-train", "cod",
                 "-train_lvl", "c",
-                "-test", "cod,tza,uga",
-                "-lr", "0.0001",
+                "-test", "cod,tza",
+                "-lr", "0.00003",
                 "-optim", "adam",
-                "-wr", "0.001",
+                "-wr", "0.01",
                 "-adamwr", "0.",
                 "--log_step", "50",
-                "-vs", "0.2"
+                "-vs", "0.2",
+                "-mm", "m",
             ]
         },
         {
@@ -282,7 +305,7 @@
                 "--custom_sampler_weights", "1,1000",
                 "--dropout", "0.0"
             ]
-        }
+        },
         {
             "name": "TZA,UGA,COD,RWA->COD superpixel_disagg_model.py",
             "type": "python",
@@ -323,11 +346,11 @@
                 "-optim", "adam",
                 "-wr", "0.01",
                 "-adamwr", "0.",
-                "-lstep", "40",
+                "-lstep", "4000",
                 "-vs", "0.2",
                 "-mm", "m,m,m,m",
                 "--sampler", "custom",
-                "--custom_sampler_weights", "1,1000,1,1",
+                "--custom_sampler_weights", "1,10000,1,1",
 
             ]
         },
@@ -344,15 +367,37 @@
                 "-train", "uga,tza,rwa,cod",
                 "-train_lvl", "c,f,f,f",
                 "-test", "tza,uga",
-                "-lr", "0.0001",
+                "-lr", "0.00003",
                 "-optim", "adam",
-                "-wr", "0.0001",
+                "-wr", "0.01",
                 "-adamwr", "0.",
                 "-lstep", "4000",
                 "-vs", "0.2",
                 "-mm", "m,m,m,m",
-                "--train_weight", "10,1,1,1"
+                "--train_weight", "1000,1,1,1"
             ]
-        }
+        },
+        {
+            "name": "TZA,UGA,RWA->COD superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,rwa",
+                "-train_lvl", "f,f,f",
+                "-test", "tza,uga,cod,rwa",
+                "-lr", "0.00003",
+                "-optim", "adam",
+                "-wr", "0.01",
+                "-adamwr", "0.",
+                "-lstep", "1000",
+                "-vs", "0.2",
+                "-mm", "m,m,m"
+            ]
+        },
     ]
 }
