--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -126,8 +126,8 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "4000",
-                "-mm", "m",
-                "-vs", "0.2"
+                "-mm", "m", 
+                "--validation_fold", "0"
             ]
         },
         {
@@ -193,6 +193,27 @@
                 "-adamwr", "0.",
                 "--log_step", "50",
                 "-vs", "0.2"
+            ]
+        },
+        {
+            "name": "RWA_CV superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "rwa",
+                "-train_lvl", "f",
+                "-test", "tza",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "--log_step", "50",
+                "--validation_fold", "1"
             ]
         },
         {
