--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -120,10 +120,10 @@
             "args": [
                 "-train", "tza",
                 "-train_lvl", "f",
-                "-test", "tza",
+                "-test", "tza,uga",
                 "-lr", "0.0001",
                 "-optim", "adam",
-                "-wr", "0.001",
+                "-wr", "0.0001",
                 "-adamwr", "0.",
                 "-lstep", "4000",
                 "-mm", "m", 
@@ -148,8 +148,30 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "200",
-                "-mm", "True",
+                "-mm", "m",
                 "-vs", "0.2"
+            ]
+        },
+        {
+            "name": "UGA_CV superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga",
+                "-train_lvl", "c",
+                "-test", "uga,tza",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.0001",
+                "-adamwr", "0.",
+                "-lstep", "100",
+                "-mm", "m",
+                "--validation_fold", "0"
             ]
         },
         {
