improved checkpointing function

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -320,7 +320,7 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-mm", "m,m",
-                "-vs", "0.2"
+                "--validation_fold", "1"
             ]
         },
         {
