--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -207,14 +207,14 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
                 "-train", "rwa",
-                "-train_lvl", "c",
-                "-test", "rwa,cod,tza,uga",
+                "-train_lvl", "f",
+                "-test", "rwa",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "--log_step", "50",
-                "-vs", "0.2"
+                "--log_step", "1",
+                "--validation_fold", "1" 
             ]
         },
         {
@@ -255,8 +255,9 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-mm", "True",
-                "-vs", "0.2"
+                "-mm", "m",
+                "-lstep", "200",
+                "--validation_fold", "0"
             ]
         },
         {
@@ -277,8 +278,8 @@
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-lstep", "50",
-                "-mm", "True",
-                "-vs", "0.2"
+                "-mm", "m",
+                "--validation_fold", "0"
             ]
         },
         {
@@ -298,8 +299,8 @@
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
-                "-vs", "0.2",
                 "-mm", "m,m",
+                "--validation_fold", "0"
             ]
         },
         {
