--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -275,7 +275,7 @@
                 "-test", "tza,uga",
                 "-lr", "0.0001",
                 "-optim", "adam",
-                "-wr", "0.001",
+                "-wr", "0.1",
                 "-adamwr", "0.",
                 "-lstep", "50",
                 "-mm", "m",
@@ -348,6 +348,29 @@
                 "--sampler", "custom",
                 "--custom_sampler_weights", "1,1000",
                 "--dropout", "0.0"
+            ]
+        },
+        {
+            "name": "TZA,UGA,RWA->??? superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            //"justMyCode": false,
+            "args": [ 
+                "-train", "uga,tza,rwa",
+                "-train_lvl", "f,f,f",
+                "-test", "uga,tza,rwa,cod",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.1",
+                "-adamwr", "0.",
+                "-lstep", "2000",
+                "--validation_fold", "0",
+                "-mm", "m,m,m,d", 
             ]
         },
         {
@@ -433,7 +456,7 @@
             "args": [ 
                 "-train", "uga,tza,rwa",
                 "-train_lvl", "f,f,f",
-                "-test", "tza,uga,cod,rwa",
+                "-test", "tza,cod,rwa",
                 "-lr", "0.00003",
                 "-optim", "adam",
                 "-wr", "0.01",
