--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -462,7 +462,7 @@
                 "-wr", "0.01",
                 "-adamwr", "0.",
                 "-lstep", "1000",
-                "-vs", "0.2",
+                "--validation_fold", "0",
                 "-mm", "m,m,m"
             ]
         },
