--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -125,7 +125,30 @@
                 "-optim", "adam",
                 "-wr", "0.0001",
                 "-adamwr", "0.",
-                "-lstep", "4000",
+                "-lstep", "200",
+                "-mm", "m", 
+                "--validation_fold", "0"
+            ]
+        },
+        {
+            "name": "TZA_CV Bayes superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "tza",
+                "-train_lvl", "c",
+                "-test", "tza,uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "--loss", "gaussNLL",
+                "-wr", "0.0001",
+                "-adamwr", "0.",
+                "-lstep", "200",
                 "-mm", "m", 
                 "--validation_fold", "0"
             ]
@@ -229,13 +252,35 @@
             "args": [ 
                 "-train", "rwa",
                 "-train_lvl", "f",
-                "-test", "rwa,tza",
+                "-test", "rwa",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "--log_step", "50",
                 "--validation_fold", "1"
+            ]
+        },
+        {
+            "name": "RWA_CV Laplace superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "rwa",
+                "-train_lvl", "f",
+                "-test", "rwa",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "--log_step", "10",
+                "--validation_fold", "1",
+                "--loss", "laplaceNLL"
             ]
         },
         {
@@ -456,12 +501,12 @@
             "args": [ 
                 "-train", "uga,tza,rwa",
                 "-train_lvl", "f,f,f",
-                "-test", "tza,cod,rwa",
+                "-test", "tza,uga,cod,rwa",
                 "-lr", "0.00003",
                 "-optim", "adam",
-                "-wr", "0.01",
+                "-wr", "0.1",
                 "-adamwr", "0.",
-                "-lstep", "1000",
+                "-lstep", "200",
                 "--validation_fold", "0",
                 "-mm", "m,m,m"
             ]
