--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -70,6 +70,38 @@
             ]
         }, 
         {
+            "name": "Py: NGA preprocessing_pop_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "preprocessing_pop_data.py",
+            "console": "integratedTerminal",
+            "args": [
+                "../../../data/OtherBuildings/NGA/nga_humdata_regions_shapefile/nga_humdata_regions.shp",
+                "../../../data/OtherBuildings/NGA/nga_humdata_regions.tif",
+                "../../../data/OtherBuildings/NGA/nga_wpop_regions.tif",
+                "../../../data/OtherBuildings/NGA/nga_wpop_census.csv",
+                "preprocessed_data_3_nga.pkl",
+                "nga",
+                "P_2020"
+            ]
+        },
+        {
+            "name": "Py: MOZ preprocessing_pop_data.py",
+            "type": "python",
+            "request": "launch",
+            "program": "preprocessing_pop_data.py",
+            "console": "integratedTerminal",
+            "args": [
+                "../../../data/OtherBuildings/MOZ/moz_humdata_regions_shapefile/moz_humdata_regions.shp",
+                "../../../data/OtherBuildings/MOZ/moz_humdata_regions.tif",
+                "../../../data/OtherBuildings/MOZ/moz_wpop_regions.tif",
+                "../../../data/OtherBuildings/MOZ/moz_wpop_census.csv",
+                "preprocessed_data_3_moz.pkl",
+                "moz",
+                "P_2020"
+            ]
+        }, 
+        {
             "name": "Py: train_model_with_agg_data.py",
             "type": "python",
             "request": "launch",
@@ -282,6 +314,50 @@
                 "--log_step", "1000",
                 "--validation_fold", "1",
                 "--loss", "laplaceNLL"
+            ]
+        },
+        {
+            "name": "NGA_CV superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "nga",
+                "-train_lvl", "f",
+                "-test", "nga,tza,uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.0001",
+                "-adamwr", "0.",
+                "-lstep", "200",
+                "-mm", "m", 
+                "--validation_fold", "0"
+            ]
+        },
+        {
+            "name": "MOZ_CV superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "-train", "moz",
+                "-train_lvl", "f",
+                "-test", "moz,tza,uga",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.0001",
+                "-adamwr", "0.",
+                "-lstep", "200",
+                "-mm", "m", 
+                "--validation_fold", "0"
             ]
         },
         {
