--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -350,7 +350,7 @@
             "args": [
                 "-train", "moz",
                 "-train_lvl", "f",
-                "-test", "moz,tza,uga",
+                "-test", "moz,nga,tza,uga",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.0001",
