--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -567,7 +567,7 @@
             ]
         },
         {
-            "name": "TZA,UGA,RWA->COD superpixel_disagg_model.py",
+            "name": "ALL->COD superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -576,8 +576,8 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,tza,rwa",
-                "-train_lvl", "f,f,f",
+                "-train", "uga,tza,rwa,nga,moz",
+                "-train_lvl", "f,f,f,f,f",
                 "-test", "tza,uga,cod,rwa",
                 "-lr", "0.00003",
                 "-optim", "adam",
@@ -585,7 +585,7 @@
                 "-adamwr", "0.",
                 "-lstep", "200",
                 "--validation_fold", "0",
-                "-mm", "m,m,m"
+                "-mm", "m,m,m,d,d"
             ]
         },
     ]
