--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -585,7 +585,30 @@
                 "-adamwr", "0.",
                 "-lstep", "200",
                 "--validation_fold", "0",
-                "-mm", "m,m,m,d,d"
+                "-mm", "m,m,m,m,d"
+            ]
+        },
+        {
+            "name": "ALL->COD superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,rwa,nga,moz",
+                "-train_lvl", "f,f,f,f,f",
+                "-test", "tza,uga,cod,rwa",
+                "-lr", "0.00003",
+                "-optim", "adam",
+                "-wr", "0.1",
+                "-adamwr", "0.",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-mm", "m,m,m,m,d",
+                "--loss", "laplaceNLL"
             ]
         },
     ]
