--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -317,6 +317,30 @@
             ]
         },
         {
+            "name": "RWA_CV Laplace Eval superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "rwa",
+                "-train_lvl", "f",
+                "-test", "rwa,uga,cod,nga,moz,tza",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.001",
+                "-adamwr", "0.",
+                "--log_step", "1000",
+                "--validation_fold", "1",
+                "--loss", "laplaceNLL",
+                "--load_state", "still-shadow-1014",
+                "--eval_only", "True"
+            ]
+        },
+        {
             "name": "NGA_CV superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
