--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -636,5 +636,29 @@
                 "--custom_sampler_weights", "1,1,1,1,1,10000"
             ]
         },
+        {
+            "name": "UGA,TZA->COD Bayes superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,tza,cod",
+                "-train_lvl", "f,f,c",
+                "-test", "tza,uga,cod",
+                "-lr", "0.00003",
+                "-optim", "adam",
+                "-wr", "0.1",
+                "-adamwr", "0.",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-mm", "m,m,m",
+                "--loss", "laplaceNLL",
+                "--custom_sampler_weights", "1,1,1,1,1,10000"
+            ]
+        },
     ]
 }
