--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -637,7 +637,7 @@
             ]
         },
         {
-            "name": "UGA,TZA->COD Bayes superpixel_disagg_model.py",
+            "name": "UGA,TZA,RWA->COD Bayes superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
             "program": "superpixel_disagg_model.py",
@@ -646,9 +646,9 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,tza,cod",
+                "-train", "uga,tza,rwa,cod",
                 "-train_lvl", "f,f,c",
-                "-test", "tza,uga,cod",
+                "-test", "uga,tza,rwa,cod",
                 "-lr", "0.00003",
                 "-optim", "adam",
                 "-wr", "0.1",
@@ -657,7 +657,32 @@
                 "--validation_fold", "0",
                 "-mm", "m,m,m",
                 "--loss", "laplaceNLL",
-                "--custom_sampler_weights", "1,1,1,1,1,10000"
+                "--custom_sampler_weights", "1,1,1,10000"
+            ]
+        },
+        {
+            "name": "UGA,TZA,RWA->COD inscaling superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "uga,rwa",
+                "-train_lvl", "f,f,c",
+                "-test", "uga,rwa",
+                "-lr", "0.00003",
+                "-optim", "adam",
+                "-wr", "0.1",
+                "-adamwr", "0.",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "-mm", "m,m,m",
+                "--loss", "laplaceNLL",
+                "--custom_sampler_weights", "1,1,1,10000",
+                "--input_scaling", "True"
             ]
         },
     ]
