--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -489,11 +489,39 @@
                 "-wr", "0.01",
                 "-adamwr", "0.001",
                 "-mm", "True",
-                "-vs", "0.2",
+                "--validation_fold", "0",
                 "-mm", "d,d",
                 "--sampler", "custom",
                 "--custom_sampler_weights", "1,1000",
                 "--dropout", "0.0"
+            ]
+        },
+        {
+            "name": "UGA,RWA->RWA superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            //"justMyCode": false,
+            "args": [ 
+                "-train", "uga",
+                "-train_lvl", "f,c",
+                "-test", "uga,rwa",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                //"-rs" "1", 
+                "-wr", "0.001",
+                "-adamwr", "0.001",
+                "--loss", "laplaceNLL",
+                "-mm", "m,m",
+                "-lstep", "200",
+                "--validation_fold", "0",
+                "--input_scaling", "True",
+                "--output_scaling", "True",
+                "-mm", "m,m",  
             ]
         },
         {
