--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -313,7 +313,8 @@
                 "-adamwr", "0.",
                 "--log_step", "1000",
                 "--validation_fold", "1",
-                "--loss", "laplaceNLL"
+                "--loss", "laplaceNLL",
+                "--output_scaling", "True"
             ]
         },
         {
@@ -483,7 +484,7 @@
             "args": [ 
                 "-train", "uga,rwa,tza",
                 "-train_lvl", "f,f,f",
-                "-test", "uga,rwa,tza,cod",
+                "-test", "uga,rwa,tza,moz,nga",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
