--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -305,10 +305,11 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
                 "-train", "rwa",
-                "-train_lvl", "f",
+                "-train_lvl", "c",
                 "-test", "rwa",
                 "-lr", "0.0001",
                 "-optim", "adam",
+                "-lstep", "100",
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "--log_step", "1000",
