--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -343,6 +343,33 @@
             ]
         },
         {
+            "name": "Eval ALL Laplace Eval superpixel_disagg_model.py",
+            "type": "python",
+            "request": "launch",
+            "program": "superpixel_disagg_model.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [ 
+                "-train", "rwa",
+                "-train_lvl", "f",
+                "-test", "cod,rwa,uga,nga,moz,tza",
+                "-lr", "0.0001",
+                "-optim", "adam",
+                "-wr", "0.01",
+                "--dropout", "0.4", 
+                "-adamwr", "0.",
+                "--log_step", "1000",
+                "--validation_fold", "0",
+                "--loss", "laplaceNLL",
+                "--input_scaling", "True",
+                "--output_scaling", "True",
+                "--load_state", "stellar-aardvark-1041",
+                "--eval_only", "True"
+            ]
+        },
+        {
             "name": "NGA_CV superpixel_disagg_model.py",
             "type": "python",
             "request": "launch",
