implementation of validation disagregation per coarse and country(-like) numbers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -488,14 +488,15 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "tza,uga",
-                "-train_lvl", "f,f",
-                "-test", "uga,tza",
+                "-train", "rwa",
+                "-train_lvl", "c,c",
+                "-test", "rwa",
                 "-lr", "0.00001",
                 "-optim", "adam",
                 "-wr", "0.001",
                 "-adamwr", "0.",
                 "-mm", "m,m",
+                "-lstep", "200",
                 "--validation_fold", "0",
                 "--loss", "laplaceNLL",
                 "--sampler", "custom",
