--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -844,9 +844,9 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "cod",
+                "-train", "rwa",
                 "-train_lvl", "f,f,f,f,f,f",
-                "-test", "tza,cod",
+                "-test", "tza,rwa,uga",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
