scale occrates and not the pop_ests, also: bug fix for inferencing on new countries (variance calculation error)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -819,9 +819,9 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,rwa,cod",
+                "-train", "uga,rwa",
                 "-train_lvl", "f,f",
-                "-test", "uga,rwa,tza",
+                "-test", "uga,rwa",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
