--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -819,9 +819,9 @@
                 "PYTHONPATH": "${workspaceRoot}",
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [ 
-                "-train", "uga,rwa,tza,moz,cod,nga",
+                "-train", "uga,rwa,tza,moz",
                 "-train_lvl", "f,f",
-                "-test", "uga,rwa,tza,moz,cod,nga",
+                "-test", "uga,rwa,tza,moz",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.001",
@@ -829,7 +829,7 @@
                 "-lstep", "2000",
                 "--dropout", "0.4",
                 "--validation_fold", "0",
-                "-mm", "m,m,m,m,d,d",
+                "-mm", "m,m,m,m,d",
                 "--loss", "laplaceNLL",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
