--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -851,7 +851,7 @@
             "args": [ 
                 "-train", "rwa",
                 "-train_lvl", "f,f,f,f,f,f",
-                "-test", "rwa",
+                "-test", "tza",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
